prepare for live

--- a/.env.example
+++ b/.env.example
@@ -9,3 +9,4 @@ EMBEDING_MODEL=text-embedding-3-small
 MY_MODEL_NAME=people_clastering_pipeline1
 DESC_AI_MODEL=gpt-4o-mini
 CLUSTER_DESCRIPTIONS_PATH=_data_cluster_descriptions.json
+DEVELOP_MODE=1
